# RK3576-expansion

./: CMakeLists.txt  push.sh
include/: db_helper.h  menu.h  network_monitor.h  system_monitor.h  thread.h
include/c/: c_api_wrapper.h  db_helper.h  email_report.h  menu.h  mqtt_client.h  thread.h
include/c/hal/: font.h  hal_dht11.h  hal_echo.h  hal_oled.h
include/cpp/: advanced_analysis.h  stats_engine.h
include/hal/: font.h  hal_dht11.h  hal_gpio.h  hal_oled.h  hal_system.h
include/pages/: page_interface.h  page_screensaver.h  popup.h
src/: db_helper.c  email_report.c  main.c  menu.c  mqtt_client.c  network_monitor.c  setup_git_pushall.sh  thread.c
src/c/: db_helper.c  email_report.c  menu.c  mqtt_client.c  system_monitor.c
src/c/hal/: hal_echo.c  hal_system.c
src/c/pages/: page_advanced_analysis.c  page_dashboard.c  page_docker.c  page_env.c  page_interface.c  page_network.c  page_system.c  page_terminal.c  page_tools.c
src/cpp/: advanced_analysis.cpp  hello.cpp
src/hal/: hal_dht11.c  hal_gpio.c  hal_oled.c
src/pages/: page_dashboard.c  page_disk.c  page_env.c  page_network.c  page_screensaver.c  page_system.c  page_tools.c  popup.c
src/scripts/: send_email.py
